(fix)Form - Aligning state picker in vertical layout

--- a/src/platform/elements/form/extras/address/Address.scss
+++ b/src/platform/elements/form/extras/address/Address.scss
@@ -87,11 +87,10 @@ novo-dynamic-form .novo-form-container form {
   div.novo-form-row novo-control>div.novo-control-container>div.novo-control-outer-container .novo-control-inner-container .novo-control-inner-input-container novo-address,
   div.novo-control-group-control novo-control>div.novo-control-container>div.novo-control-outer-container .novo-control-inner-container .novo-control-inner-input-container novo-address,
   td.novo-form-row novo-control>div.novo-control-container>div.novo-control-outer-container .novo-control-inner-container .novo-control-inner-input-container novo-address {
+
     .street-address,
     .apt,
-    .city,
-    .state,
-    .zip,
+    .addressRow,
     .country-name {
       &:hover:not(.invalid) i.required-indicator.bhi-circle,
       &:hover:not(.invalid) i.required-indicator.bhi-check {
@@ -126,4 +125,14 @@ novo-dynamic-form .novo-form-container form {
       border-bottom: 1px solid $negative;
     }
   }
+}
+
+novo-dynamic-form[layout='vertical'] .novo-form-container form {
+    .state {
+        margin-bottom: 1px;
+        i.required-indicator {
+          margin-bottom: 1px;
+        }
+    }
+
 }
